More performant list of countries

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -2,5 +2,6 @@
   "layout": "Layout",
   "language": "Language",
   "time": "Time",
-  "articles": "articles"
+  "articles": "articles",
+  "news_from": "News from"
 }
