--- a/src/i18n/pl.json
+++ b/src/i18n/pl.json
@@ -2,5 +2,6 @@
   "layout": "Układ",
   "language": "Język",
   "time": "Godzina",
-  "articles": "artykuły"
+  "articles": "artykuły",
+  "news_from": "Artykuły z"
 }
