--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -6,5 +6,8 @@
   "news_from": "News from",
   "article_picture": "Picture from the article",
   "posted": "Posted",
-  "source": "Source"
+  "source": "Source",
+  "test_data_warning": "Note, you are using test data, if you want to display the actual information, configure the .env file accordingly.",
+  "biggest_challenge": "The biggest challenge was creating the design of the site, which you can probably see, and writing tests due to the fact that I had never done it, this was the first time.",
+  "the_most_fun": "The most fun, of course, was the actual implementation of all the mechanics, the whole project. I probably spent more time on it than I should have, but I love tinkering."
 }
